# inplaneflashmethod

./: CMakeLists.txt  README.md  calculate_unknown_diffusivity.cpp  calculate_unknown_diffusivity.h  import.h  main.cpp  parameters.txt  read_parameters.cpp  read_parameters.h  simulation_parameters.h
data/: data_copper.csv
include/: calculate_unknown_diffusivity.h  lowess.h  simulation_parameters.h
src/: calculate_unknown_diffusivity.cpp  main.cpp  read_parameters.cpp
